@@ -3,6 +3,7 @@ v7.9
 : Fixed a bug that caused quick and instant sell buttons to sometimes appear multiple times
 : Adjusted for a layout change that caused links to SteamDB, SteamCardExchange, and PCGW not to show
 : Adjusted for a layout change that broke the removal of games from your wishlist from their app page
+: Fixed a bug that caused multiple clicks on the card drops remaining to show an incorrect total
 
 
 v7.8
